%%{init: {"theme": "default", "themeVariables": {}, "classDiagram": {"nodeSpacing": 20, "rankSpacing": 30}}}%%
classDiagram
  direction LR

  class Exception:::java
  class SplendorException {
    +SplendorException(message String)
    +SplendorException(messageFormat String, args Object...)
    +SplendorException(message String, cause Throwable)
  }
  class GameStateException {
    +GameStateException(message String)
    +GameStateException(messageFormat String, args Object...)
  }
  class InsufficientTokensException {
    +InsufficientTokensException(message String)
    +InsufficientTokensException(messageFormat String, args Object...)
  }
  class InvalidMoveException {
    +InvalidMoveException(message String)
    +InvalidMoveException(messageFormat String, args Object...)
  }
  class InvalidPlayerActionException {
    +InvalidPlayerActionException(message String)
    +InvalidPlayerActionException(messageFormat String, args Object...)
  }
  class NetworkException {
    +NetworkException(message String)
    +NetworkException(message String, cause Throwable)
  }
  class ConfigException {
    +ConfigException(message String)
    +ConfigException(message String, cause Throwable)
  }
  class DataLoadException {
    +DataLoadException(message String)
    +DataLoadException(message String, cause Throwable)
  }

  Exception <|-- SplendorException
  Exception <|-- ConfigException
  Exception <|-- DataLoadException
  SplendorException <|-- GameStateException
  SplendorException <|-- InsufficientTokensException
  SplendorException <|-- InvalidMoveException
  SplendorException <|-- InvalidPlayerActionException
  SplendorException <|-- NetworkException

  note for ConfigException "extends Exception directly\n(NOT SplendorException)"
  note for DataLoadException "extends Exception directly\n(NOT SplendorException)"
